<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_import_contacts"
        android:title="@string/action_import_contact"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:orderInCategory="30"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_sms"
        android:title="@string/action_import_sms"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_color"
        android:title="@string/change_toolbar_color"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>